--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-try",
   "version": "0.1.0",
-  "homepage":"https://calebbrett.github.io/Personal-Website",
+  "homepage": "https://calebbrett.github.io/Personal-Website",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-particles-js": "^2.6.0",
@@ -14,7 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
- 	"deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
