--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-try",
   "version": "0.1.0",
-  "homepage": "http://www.calebbrett.ca",
+  "homepage": "https://calebbrett.github.io/Personal-Website/",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
