--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.7.0",
     "react-particles-js": "^2.6.0",
     "react-player": "^1.9.3",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
