--- a/src/projects.json
+++ b/src/projects.json
@@ -36,7 +36,7 @@
 		"extension": ".mp4",
 		"landscape": false,
 		"isUnder": true,
-		"tools": "LoRa,PLC,Networking,UDP,Arduino,Enclosure design,Electrical design,soldering",
+		"tools": "LoRa,PLC,Networking,UDP,Arduino,soldering",
 		"blerb": "          During my work term at St Marys Cement I was tasked with creating a wireless temperature sensor. The requirements for this sensor were as follows: it must send a UDP message with the data once every minute, it must last for at least 3 years without replacing the battery, and it must withstand harsh outdoor conditions such as cement dust, snow and rain. After some research I learned about LoRa which can send small packets of data over large distances with a lot less power than Wi-Fi. From here I found a microcontroller that had a LoRa radio module. After presenting my preliminary design, my boss said that I should \n\rdesign it to last as long as possible\r in order to reduce maintenance costs. So, I added a \n\rsolar panel and charging circuit\r. After soldering all the components and fitting it into the housing, the prototype was complete. It had a screen with buttons to let a user configure and debug the device. It read the temperature from a sensor in the \n\rthermowell\r. It sends this data through the radio module and antenna to a \n\rLoRa gateway\r which forwarded the data as a UDP packet via Ethernet to the company’s local network. From here the PLC’s received the packet and processed the data."
 	},
 	{
